# systech-aidd

./: .coveragerc  .dockerignore  .env.test  .gitignore  Dockerfile.backend  Dockerfile.migrations  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.test.yml  docker-compose.yml  env.local.example  env.production  env.production.example  pyproject.toml  pytest.ini  sample.env
.cursor/commands/: rerun.md  review.md  workflow.md
.cursor/plans/: complete-dashboard-subsprint-3236a35b.plan.md  frontend-dashboard-improvements-424fe81b.plan.md  frontend-project-framework-c1c69656.plan.md  frontend.chat.fb86f462.plan.md  mock-api-sprint-0eae495d.plan.md  persistent-storage-s1-d51c60a2.plan.md  sprint-4-ai-chat-7b459c62.plan.md
.cursor/rules/: conventions.mdc  mcp.json  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc  workflow_tech_debt.mdc
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 08c8618d6a0a_add_users_table.py  0b1d225cd32e_initial_migration_create_messages_table.py  596ec4cadac0_seed_historical_test_data.py  85bbf7e36eea_migrate_existing_users_from_messages.py  9c0083885caf_seed_test_data.py
devops/doc/: d0-api-test-results.md  d0-known-issues.md  d0-summary.md  d0-test-results.md  d1-next-steps.md  d1-summary.md  devops-roadmap.md  github-actions-guide.md  testing-d0.md
docs/: database_schema.md  idea.md  roadmap.md  tasklist.md  tasklist_tech_dept.md  vision.md
docs/api/: api-contract.md
docs/frontend/: dashboard-requirements.md
docs/guides/: manual-deploy.md
docs/reviews/: review_001.md
docs/tasklists/: tasklist-sp0.md  tasklist-sp2.md  tasklist-sp3-report.md  tasklist-sp3-subsprint2-report.md  tasklist-sp3-subsprint3-report.md  tasklist-sp3.md  tasklist_tech_dept-sp0.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/docs/: front-vision.md  tech-stack.md
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
frontend/types/: vite-tsconfig-paths.d.ts
prompts/: system.txt  text2sql.txt
src/: README.md  __init__.py  bot.py  config.py  conversation.py  database.py  db_models.py  handlers.py  llm_client.py  main.py  models.py  repository.py  user_repository.py
src/api/: __init__.py  app.py  main.py  (+6 more)
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_models.py  test_chat_api.py  test_config.py  test_conversation.py  test_database.py  test_db_models.py  test_handlers.py  test_history_limit_db.py  test_integration.py  test_llm_client.py  test_mock_stat_collector.py  test_models.py  test_real_stat_collector.py  test_repository.py  test_text2sql_handler.py  test_user_integration.py  test_user_repository.py  test_web_chat_handler.py
(+33 files in other folders)
